--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -33,7 +33,9 @@ Secondary Color (Orange): #e0b354;
 --FontWeight_H: 700;
 }
 
-
+.table{
+  border: 1px solid black;
+}
 
 
 
@@ -187,6 +189,13 @@ h1 {
     display: flex;
     flex-direction: column;
     text-align: center;
+    border: none;
+
+    position: fixed;
+    left: 50%;
+    bottom: 20px;
+    transform: translate(-50%, -50%);
+    margin: 0 auto;
   }
 
   .profile {
@@ -212,6 +221,7 @@ h1 {
 
     */
 
+
     .page-header {
         display: flex;
         width: 100%;
@@ -226,8 +236,6 @@ h1 {
         flex-grow: .9;
         text-align: right;
       }
-
-
 
 
 
@@ -297,16 +305,6 @@ h1 {
   .cloud-back {
     animation: 30s cloud-move-reverse infinite alternate linear;
   }
-
-
-
-
-
-
-
-
-
-
 
 
       @media all and (max-width: 500px) {
