--- a/CSS/style.production.css
+++ b/CSS/style.production.css
@@ -38,6 +38,7 @@ Secondary Color (Orange): #e0b354;
           padding: 10px; 
           margin: 10px; 
           border: 1px solid black; 
+          background-color: lightgrey;
   }
   
   
